# GameEngine

./: .gitmodules  CMakeLists.txt  README.md
GE/: CMakeLists.txt
GE/src/core/utils/: main.cpp
GESDK/: CMakeLists.txt
GESDK/src/: main.cpp
GameEngineCore/: CmakeLists.txt
GameEngineCore/include/: application.h  camera.h  events.h  helloWorld.h  input.h  keys.h  log.h  window.h
GameEngineCore/include/rendering/: camera.h
GameEngineCore/src/: application.cpp  helloWorld.cpp  input.cpp  window.cpp
GameEngineCore/src/modules/: moduleUI.cpp  moduleUI.h
GameEngineCore/src/rendering/: camera.cpp  camera.h
GameEngineCore/src/rendering/OpenGL/: indexBuffer.cpp  indexBuffer.h  openGL_Renderer.cpp  openGL_Renderer.h  shader.cpp  shader.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h
SDK/: CmakeLists.txt
SDK/src/: main.cpp
